// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Alerts Left Accent Border 1`] = `
.emotion-1 {
  background-color: #fffaf0;
  border-left-width: 4px;
  border-color: #ed8936;
  color: #c05621;
  padding: 1rem;
}

.emotion-0 {
  font-weight: 700;
}

<div
  className="emotion-1"
>
  <p
    className="emotion-0"
  >
    Be Warned
  </p>
  <p>
    Something not ideal might be happening.
  </p>
</div>
`;

exports[`Storyshots Components/Alerts Modern With Badge 1`] = `
.emotion-4 {
  background-color: #3c366b;
  text-align: center;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

@media (min-width:1024px) {
  .emotion-4 {
    padding-right: 1rem;
    padding-left: 1rem;
  }
}

.emotion-3 {
  padding: 0.5rem;
  background-color: #434190;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ebf4ff;
  line-height: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (min-width:1024px) {
  .emotion-3 {
    border-radius: 9999px;
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 9999px;
  background-color: #667eea;
  text-transform: uppercase;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  font-size: 0.75rem;
  font-weight: 700;
  margin-right: 0.75rem;
}

.emotion-1 {
  font-weight: 600;
  margin-right: 0.5rem;
  text-align: left;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.emotion-2 {
  fill: currentColor;
  opacity: 0.75;
  height: 1rem;
  width: 1rem;
}

<div
  className="emotion-4"
>
  <div
    className="emotion-3"
    role="alert"
  >
    <span
      className="emotion-0"
    >
      New
    </span>
    <span
      className="emotion-1"
    >
      Get the coolest t-shirts from our brand new store
    </span>
    <svg
      className="emotion-2"
    >
      <path
        d="M12.95 10.707l.707-.707L8 4.343 6.586 5.757 10.828 10l-4.242 4.243L8 15.657l4.95-4.95z"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Components/Alerts Solid 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4299e1;
  color: #fff;
  font-size: 0.875rem;
  font-weight: 700;
  padding-right: 1rem;
  padding-left: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

.emotion-0 {
  fill: currentColor;
  width: 1rem;
  height: 1rem;
  margin-right: 0.5rem;
}

<div
  className="emotion-1"
  role="alert"
>
  <svg
    className="emotion-0"
    viewBox="0 0 20 20"
  >
    <path
      d="M12.432 0c1.34 0 2.01.912 2.01 1.957 0 1.305-1.164 2.512-2.679 2.512-1.269 0-2.009-.75-1.974-1.99C9.789 1.436 10.67 0 12.432 0zM8.309 20c-1.058 0-1.833-.652-1.093-3.524l1.214-5.092c.211-.814.246-1.141 0-1.141-.317 0-1.689.562-2.502 1.117l-.528-.88c2.572-2.186 5.531-3.467 6.801-3.467 1.057 0 1.233 1.273.705 3.23l-1.391 5.352c-.246.945-.141 1.271.106 1.271.317 0 1.357-.392 2.379-1.207l.6.814C12.098 19.02 9.365 20 8.309 20z"
    />
  </svg>
  <p>
    Something happened that you should know about.
  </p>
</div>
`;

exports[`Storyshots Components/Alerts Titled 1`] = `
.emotion-0 {
  background-color: #f56565;
  color: #fff;
  font-weight: 700;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  padding-right: 1rem;
  padding-left: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.emotion-1 {
  border-width: 1px;
  border-top-width: 0;
  border-color: #fc8181;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
  background-color: #fff5f5;
  padding-right: 1rem;
  padding-left: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  color: #c53030;
}

<div
  role="alert"
>
  <div
    className="emotion-0"
  >
    Danger
  </div>
  <div
    className="emotion-1"
  >
    <p>
      Something not ideal might be happening.
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Alerts Top Accent Border 1`] = `
.emotion-0 {
  background-color: #e6fffa;
}

<div
  className="emotion-0"
  role="alert"
>
  <div>
    <div>
      <svg
        viewBox="0 0 20 20"
      >
        <path
          d="M2.93 17.07A10 10 0 1 1 17.07 2.93 10 10 0 0 1 2.93 17.07zm12.73-1.41A8 8 0 1 0 4.34 4.34a8 8 0 0 0 11.32 11.32zM9 11V9h2v6H9v-4zm0-6h2v2H9V5z"
        />
      </svg>
    </div>
    <div>
      <p>
        Our privacy policy has changed
      </p>
      <p>
        Make sure you know how these changes affect you.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Alerts Traditional 1`] = `
.emotion-4 {
  background-color: #fff5f5;
  border-width: 1px;
  border-color: #fc8181;
  color: #c53030;
  padding-right: 1rem;
  padding-left: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  border-radius: 0.25rem;
  position: relative;
}

.emotion-0 {
  font-weight: 700;
}

.emotion-1 {
  display: block;
}

@media (min-width:640px) {
  .emotion-1 {
    display: inline;
  }
}

.emotion-3 {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  padding-right: 1rem;
  padding-left: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

.emotion-2 {
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
  color: #f56565;
}

<div
  className="emotion-4"
  role="alert"
>
  <strong
    className="emotion-0"
  >
    Holy smokes!
  </strong>
  <span
    className="emotion-1"
  >
    Something seriously bad happened.
  </span>
  <span
    className="emotion-3"
  >
    <svg
      className="emotion-2"
      role="button"
      viewBox="0 0 20 20"
    >
      <title>
        Close
      </title>
      <path
        d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Font Family Monospaced 1`] = `
.emotion-0 {
  font-family: Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
}

<p
  className="emotion-0"
>
  I'm a monospaced paragraph.
</p>
`;

exports[`Storyshots Font Family Responsive 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

@media (min-width:640px) {
  .emotion-0 {
    font-family: Georgia,Cambria,"Times New Roman",Times,serif;
  }
}

@media (min-width:768px) {
  .emotion-0 {
    font-family: Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  }
}

@media (min-width:1024px) {
  .emotion-0 {
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  }
}

@media (min-width:1280px) {
  .emotion-0 {
    font-family: Georgia,Cambria,"Times New Roman",Times,serif;
  }
}

<p
  className="emotion-0"
>
  I'm a paragraph.
</p>
`;

exports[`Storyshots Font Family Sans Serif 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

<p
  className="emotion-0"
>
  I'm a sans-serif paragraph.
</p>
`;

exports[`Storyshots Font Family Serif 1`] = `
.emotion-0 {
  font-family: Georgia,Cambria,"Times New Roman",Times,serif;
}

<p
  className="emotion-0"
>
  I'm a serif paragraph.
</p>
`;

exports[`Storyshots Font Smoothing Grayscale Antialiasing 1`] = `
.emotion-0 {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

<p
  className="emotion-0"
>
  The quick brown fox jumped over the lazy dog.
</p>
`;

exports[`Storyshots Font Smoothing Subpixel Antialiasing 1`] = `
.emotion-0 {
  -webkit-font-smoothing: auto;
  -moz-osx-font-smoothing: auto;
}

<p
  className="emotion-0"
>
  The quick brown fox jumped over the lazy dog.
</p>
`;

exports[`Storyshots Layout/Display Block 1`] = `
.emotion-3 {
  background-color: #edf2f7;
  padding: 1rem;
}

.emotion-0 {
  display: block;
  color: #4a5568;
  text-align: center;
  background-color: #cbd5e0;
  padding-right: 1rem;
  padding-left: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.emotion-1 {
  display: block;
  color: #4a5568;
  text-align: center;
  background-color: #cbd5e0;
  padding-right: 1rem;
  padding-left: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="emotion-3"
>
  <span
    className="emotion-0"
  >
    1
  </span>
  <span
    className="emotion-1"
  >
    2
  </span>
  <span
    className="emotion-1"
  >
    3
  </span>
</div>
`;

exports[`Storyshots Layout/Display Flex 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #edf2f7;
}

.emotion-0 {
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
  color: #4a5568;
  text-align: center;
  background-color: #cbd5e0;
  padding-right: 1rem;
  padding-left: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  margin: 0.5rem;
}

<div
  className="emotion-3"
>
  <span
    className="emotion-0"
  >
    1
  </span>
  <span
    className="emotion-0"
  >
    2
  </span>
  <span
    className="emotion-0"
  >
    3
  </span>
</div>
`;

exports[`Storyshots Layout/Display Hidden 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #edf2f7;
}

.emotion-0 {
  display: none;
  color: #4a5568;
  text-align: center;
  background-color: #cbd5e0;
  padding-right: 1rem;
  padding-left: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  margin: 0.5rem;
}

.emotion-1 {
  color: #4a5568;
  text-align: center;
  background-color: #cbd5e0;
  padding-right: 1rem;
  padding-left: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  margin: 0.5rem;
}

<div
  className="emotion-3"
>
  <span
    className="emotion-0"
  >
    1
  </span>
  <span
    className="emotion-1"
  >
    2
  </span>
  <span
    className="emotion-1"
  >
    3
  </span>
</div>
`;

exports[`Storyshots Layout/Display Inline 1`] = `
.emotion-3 {
  background-color: #edf2f7;
}

.emotion-0 {
  display: inline;
  color: #4a5568;
  text-align: center;
  background-color: #cbd5e0;
  padding-right: 1rem;
  padding-left: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

<div
  className="emotion-3"
>
  <span
    className="emotion-0"
  >
    1
  </span>
  <span
    className="emotion-0"
  >
    2
  </span>
  <span
    className="emotion-0"
  >
    3
  </span>
</div>
`;

exports[`Storyshots Layout/Display Inline Block 1`] = `
.emotion-3 {
  background-color: #edf2f7;
}

.emotion-0 {
  display: inline-block;
  color: #4a5568;
  text-align: center;
  background-color: #cbd5e0;
  padding-right: 1rem;
  padding-left: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  margin: 0.5rem;
}

<div
  className="emotion-3"
>
  <span
    className="emotion-0"
  >
    1
  </span>
  <span
    className="emotion-0"
  >
    2
  </span>
  <span
    className="emotion-0"
  >
    3
  </span>
</div>
`;

exports[`Storyshots Layout/Display Inline Flex 1`] = `
.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: #edf2f7;
}

.emotion-0 {
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
  color: #4a5568;
  text-align: center;
  background-color: #cbd5e0;
  padding-right: 1rem;
  padding-left: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  margin: 0.5rem;
}

<div
  className="emotion-3"
>
  <span
    className="emotion-0"
  >
    1
  </span>
  <span
    className="emotion-0"
  >
    2
  </span>
  <span
    className="emotion-0"
  >
    3
  </span>
</div>
`;

exports[`Storyshots Layout/Display Responsive 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #edf2f7;
}

@media (min-width:640px) {
  .emotion-3 {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
  }
}

@media (min-width:768px) {
  .emotion-3 {
    display: block;
  }
}

@media (min-width:1024px) {
  .emotion-3 {
    display: none;
  }
}

@media (min-width:1280px) {
  .emotion-3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

.emotion-0 {
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
  color: #4a5568;
  text-align: center;
  background-color: #cbd5e0;
  padding-right: 1rem;
  padding-left: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  margin: 0.5rem;
}

<div
  className="emotion-3"
>
  <span
    className="emotion-0"
  >
    1
  </span>
  <span
    className="emotion-0"
  >
    2
  </span>
  <span
    className="emotion-0"
  >
    3
  </span>
</div>
`;

exports[`Storyshots Layout/Display Table 1`] = `
.emotion-8 {
  display: table;
  width: 100%;
}

.emotion-3 {
  display: table-row;
}

.emotion-0 {
  display: table-cell;
  background-color: #cbd5e0;
  color: #4a5568;
  padding-right: 1rem;
  padding-left: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  font-size: 0.875rem;
}

.emotion-1 {
  display: table-cell;
  background-color: #edf2f7;
  color: #4a5568;
  padding-right: 1rem;
  padding-left: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  font-size: 0.875rem;
}

<div
  className="emotion-8"
>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-0"
    >
      A cell with more content
    </div>
    <div
      className="emotion-1"
    >
      Cell 2
    </div>
    <div
      className="emotion-0"
    >
      Cell 3
    </div>
  </div>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-1"
    >
      Cell 4
    </div>
    <div
      className="emotion-0"
    >
      A cell with more content
    </div>
    <div
      className="emotion-1"
    >
      Cell 6
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Color Hover 1`] = `
.emotion-0 {
  color: #3182ce;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-right: 1rem;
  padding-left: 1rem;
  font-weight: 600;
}

.emotion-0:hover {
  color: #e53e3e;
}

<button
  className="emotion-0"
>
  Button
</button>
`;

exports[`Storyshots Text Color Responsive 1`] = `
.emotion-0 {
  color: #3182ce;
  font-size: 1.25rem;
}

@media (min-width:640px) {
  .emotion-0 {
    color: #38a169;
  }
}

@media (min-width:768px) {
  .emotion-0 {
    color: #5a67d8;
  }
}

@media (min-width:1024px) {
  .emotion-0 {
    color: #e53e3e;
  }
}

@media (min-width:1280px) {
  .emotion-0 {
    color: #1a202c;
  }
}

<div
  className="emotion-0"
>
  The quick brown fox jumped over the lazy dog.
</div>
`;

exports[`Storyshots Text Color Responsive Hover 1`] = `
.emotion-0 {
  color: #3182ce;
}

.emotion-0:hover {
  color: #e53e3e;
}

@media (min-width:768px) {
  .emotion-0 {
    color: #4299e1;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    padding-right: 1rem;
    padding-left: 1rem;
    font-weight: 600;
  }

  .emotion-0:hover {
    color: #3182ce;
  }
}

<button
  className="emotion-0"
>
  Button
</button>
`;

exports[`Storyshots Text Color Usage 1`] = `
.emotion-0 {
  color: #805ad5;
  font-size: 1.25rem;
}

<div
  className="emotion-0"
>
  The quick brown fox jumped over the lazy dog.
</div>
`;
